Tercera Entrega/src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLASIMPLE
    COMMENT
    COMMENTLINEA
    COMILLADOBLE

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> CLASS_DECL_LIST
Rule 2     PROGRAMA -> epsilon
Rule 3     CLASS_DECL_LIST -> CLASS_DECL
Rule 4     CLASS_DECL_LIST -> CLASS_DECL CLASS_DECL_LIST
Rule 5     CLASS_DECL -> CLASS ID EXTENDS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
Rule 6     CLASS_DECL -> CLASS ID EXTENDS ID LLAVEIZQ LLAVEDER
Rule 7     CLASS_DECL -> CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
Rule 8     CLASS_DECL -> CLASS ID LLAVEIZQ LLAVEDER
Rule 9     FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL
Rule 10    FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL FIELD_OR_METHOD_DECL_LIST
Rule 11    FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL
Rule 12    FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL FIELD_OR_METHOD_DECL_LIST
Rule 13    FIELD_DECL -> TYPE ID FINALIZADOR
Rule 14    FIELD_DECL -> TYPE ID LIST_AUX_IDS ;
Rule 15    LIST_AUX_IDS -> COMA ID
Rule 16    LIST_AUX_IDS -> COMA ID LIST_AUX_IDS
Rule 17    METHOD_DECL -> TYPE ID PARENTIZQ PARENTDER BLOCK
Rule 18    METHOD_DECL -> TYPE ID PARENTIZQ FORMALS PARENTDER BLOCK
Rule 19    METHOD_DECL -> VOID ID PARENTIZQ PARENTDER BLOCK
Rule 20    METHOD_DECL -> VOID ID PARENTIZQ FORMALS PARENTDER BLOCK
Rule 21    FORMALS -> TYPE ID
Rule 22    FORMALS -> TYPE ID COMA FORMALS
Rule 23    TYPE -> INT
Rule 24    TYPE -> BOOLEAN
Rule 25    TYPE -> STRING
Rule 26    TYPE -> ID
Rule 27    TYPE -> TYPE CORCHIZQ CORCHDER
Rule 28    BLOCK -> LLAVEIZQ LLAVEDER
Rule 29    BLOCK -> LLAVEIZQ VAR_DECL_STATEMENTS_LIST LLAVEDER
Rule 30    VAR_DECL_STATEMENTS_LIST -> VAR_DECL
Rule 31    VAR_DECL_STATEMENTS_LIST -> VAR_DECL VAR_DECL_STATEMENTS_LIST
Rule 32    VAR_DECL_STATEMENTS_LIST -> STATEMENT
Rule 33    VAR_DECL_STATEMENTS_LIST -> STATEMENT VAR_DECL_STATEMENTS_LIST
Rule 34    VAR_DECL -> TYPE ID LIST_IDS_EXPRESSIONS FINALIZADOR
Rule 35    VAR_DECL -> TYPE ID FINALIZADOR
Rule 36    VAR_DECL -> TYPE ID ASIGNAR EXPRESSION LIST_IDS_EXPRESSIONS FINALIZADOR
Rule 37    VAR_DECL -> TYPE ID ASIGNAR EXPRESSION FINALIZADOR
Rule 38    LIST_IDS_EXPRESSIONS -> COMA ID
Rule 39    LIST_IDS_EXPRESSIONS -> COMA ID ASIGNAR EXPRESSION
Rule 40    LIST_IDS_EXPRESSIONS -> COMA ID LIST_IDS_EXPRESSIONS
Rule 41    LIST_IDS_EXPRESSIONS -> COMA ID ASIGNAR EXPRESSION LIST_IDS_EXPRESSIONS
Rule 42    STATEMENT -> ASSIGN FINALIZADOR
Rule 43    STATEMENT -> CALL FINALIZADOR
Rule 44    STATEMENT -> RETURN EXPRESSION FINALIZADOR
Rule 45    STATEMENT -> RETURN FINALIZADOR
Rule 46    STATEMENT -> IF PARENTIZQ EXPRESSION PARENTDER STATEMENT ELSE STATEMENT
Rule 47    STATEMENT -> IF PARENTIZQ EXPRESSION PARENTDER STATEMENT
Rule 48    STATEMENT -> WHILE PARENTIZQ EXPRESSION PARENTDER STATEMENT
Rule 49    STATEMENT -> BREAK FINALIZADOR
Rule 50    STATEMENT -> CONTINUE FINALIZADOR
Rule 51    STATEMENT -> BLOCK
Rule 52    ASSIGN -> LOCATION ASIGNAR EXPRESSION
Rule 53    LOCATION -> ID
Rule 54    LOCATION -> EXPRESSION ACCESO ID
Rule 55    LOCATION -> ID CORCHIZQ EXPRESSION CORCHDER
Rule 56    CALL -> METHOD PARENTIZQ ACTUALS PARENTDER
Rule 57    CALL -> METHOD PARENTIZQ PARENTDER
Rule 58    METHOD -> ID
Rule 59    METHOD -> EXPRESSION ACCESO ID
Rule 60    ACTUALS -> EXPRESSION
Rule 61    ACTUALS -> EXPRESSION COMA ACTUALS
Rule 62    EXPRESSION -> LOCATION
Rule 63    EXPRESSION -> CALL
Rule 64    EXPRESSION -> THIS
Rule 65    EXPRESSION -> NEW ID PARENTIZQ PARENTDER
Rule 66    EXPRESSION -> NEW TYPE CORCHIZQ EXPRESSION CORCHDER
Rule 67    EXPRESSION -> EXPRESSION ACCESO LENGTH
Rule 68    EXPRESSION -> BINARY_EXPRESSION
Rule 69    EXPRESSION -> NEGLOGICA EXPRESSION
Rule 70    EXPRESSION -> MINUS EXPRESSION
Rule 71    EXPRESSION -> LITERAL
Rule 72    EXPRESSION -> PARENTIZQ EXPRESSION PARENTDER
Rule 73    BINARY_EXPRESSION -> EXPRESSION PLUS EXPRESSION
Rule 74    BINARY_EXPRESSION -> EXPRESSION MINUS EXPRESSION
Rule 75    BINARY_EXPRESSION -> EXPRESSION POR EXPRESSION
Rule 76    BINARY_EXPRESSION -> EXPRESSION DIVIDE EXPRESSION
Rule 77    BINARY_EXPRESSION -> EXPRESSION MODULO EXPRESSION
Rule 78    BINARY_EXPRESSION -> EXPRESSION YAND EXPRESSION
Rule 79    BINARY_EXPRESSION -> EXPRESSION OOR EXPRESSION
Rule 80    BINARY_EXPRESSION -> EXPRESSION MENORQUE EXPRESSION
Rule 81    BINARY_EXPRESSION -> EXPRESSION MENORIGUAL EXPRESSION
Rule 82    BINARY_EXPRESSION -> EXPRESSION MAYORQUE EXPRESSION
Rule 83    BINARY_EXPRESSION -> EXPRESSION MAYORIGUAL EXPRESSION
Rule 84    BINARY_EXPRESSION -> EXPRESSION COMPIGUAL EXPRESSION
Rule 85    BINARY_EXPRESSION -> EXPRESSION COMPDIFERENTE EXPRESSION
Rule 86    LITERAL -> NUMERO
Rule 87    LITERAL -> BIN
Rule 88    LITERAL -> NUMEROC
Rule 89    LITERAL -> CADENA
Rule 90    LITERAL -> TRUE
Rule 91    LITERAL -> FALSE
Rule 92    LITERAL -> NULL
Rule 93    epsilon -> <empty>

Terminals, with rules where they appear

;                    : 14
ACCESO               : 54 59 67
ASIGNAR              : 36 37 39 41 52
BIN                  : 87
BOOLEAN              : 24
BREAK                : 49
CADENA               : 89
CLASS                : 5 6 7 8
COMA                 : 15 16 22 38 39 40 41 61
COMILLADOBLE         : 
COMILLASIMPLE        : 
COMMENT              : 
COMMENTLINEA         : 
COMPDIFERENTE        : 85
COMPIGUAL            : 84
CONTINUE             : 50
CORCHDER             : 27 55 66
CORCHIZQ             : 27 55 66
DIVIDE               : 76
ELSE                 : 46
EXTENDS              : 5 6
FALSE                : 91
FINALIZADOR          : 13 34 35 36 37 42 43 44 45 49 50
ID                   : 5 5 6 6 7 8 13 14 15 16 17 18 19 20 21 22 26 34 35 36 37 38 39 40 41 53 54 55 58 59 65
IF                   : 46 47
INT                  : 23
LENGTH               : 67
LLAVEDER             : 5 6 7 8 28 29
LLAVEIZQ             : 5 6 7 8 28 29
MAYORIGUAL           : 83
MAYORQUE             : 82
MENORIGUAL           : 81
MENORQUE             : 80
MINUS                : 70 74
MODULO               : 77
NEGLOGICA            : 69
NEW                  : 65 66
NULL                 : 92
NUMERO               : 86
NUMEROC              : 88
OOR                  : 79
PARENTDER            : 17 18 19 20 46 47 48 56 57 65 72
PARENTIZQ            : 17 18 19 20 46 47 48 56 57 65 72
PLUS                 : 73
POR                  : 75
RETURN               : 44 45
STRING               : 25
THIS                 : 64
TRUE                 : 90
VOID                 : 19 20
WHILE                : 48
YAND                 : 78
error                : 

Nonterminals, with rules where they appear

ACTUALS              : 56 61
ASSIGN               : 42
BINARY_EXPRESSION    : 68
BLOCK                : 17 18 19 20 51
CALL                 : 43 63
CLASS_DECL           : 3 4
CLASS_DECL_LIST      : 1 4
EXPRESSION           : 36 37 39 41 44 46 47 48 52 54 55 59 60 61 66 67 69 70 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85
FIELD_DECL           : 9 10
FIELD_OR_METHOD_DECL_LIST : 5 7 10 12
FORMALS              : 18 20 22
LIST_AUX_IDS         : 14 16
LIST_IDS_EXPRESSIONS : 34 36 40 41
LITERAL              : 71
LOCATION             : 52 62
METHOD               : 56 57
METHOD_DECL          : 11 12
PROGRAMA             : 0
STATEMENT            : 32 33 46 46 47 48
TYPE                 : 13 14 17 18 21 22 27 34 35 36 37 66
VAR_DECL             : 30 31
VAR_DECL_STATEMENTS_LIST : 29 31 33
epsilon              : 2

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . CLASS_DECL_LIST
    (2) PROGRAMA -> . epsilon
    (3) CLASS_DECL_LIST -> . CLASS_DECL
    (4) CLASS_DECL_LIST -> . CLASS_DECL CLASS_DECL_LIST
    (93) epsilon -> .
    (5) CLASS_DECL -> . CLASS ID EXTENDS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> . CLASS ID EXTENDS ID LLAVEIZQ LLAVEDER
    (7) CLASS_DECL -> . CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (8) CLASS_DECL -> . CLASS ID LLAVEIZQ LLAVEDER

    $end            reduce using rule 93 (epsilon -> .)
    CLASS           shift and go to state 5

    PROGRAMA                       shift and go to state 1
    CLASS_DECL_LIST                shift and go to state 2
    epsilon                        shift and go to state 3
    CLASS_DECL                     shift and go to state 4

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> CLASS_DECL_LIST .

    $end            reduce using rule 1 (PROGRAMA -> CLASS_DECL_LIST .)


state 3

    (2) PROGRAMA -> epsilon .

    $end            reduce using rule 2 (PROGRAMA -> epsilon .)


state 4

    (3) CLASS_DECL_LIST -> CLASS_DECL .
    (4) CLASS_DECL_LIST -> CLASS_DECL . CLASS_DECL_LIST
    (3) CLASS_DECL_LIST -> . CLASS_DECL
    (4) CLASS_DECL_LIST -> . CLASS_DECL CLASS_DECL_LIST
    (5) CLASS_DECL -> . CLASS ID EXTENDS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> . CLASS ID EXTENDS ID LLAVEIZQ LLAVEDER
    (7) CLASS_DECL -> . CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (8) CLASS_DECL -> . CLASS ID LLAVEIZQ LLAVEDER

    $end            reduce using rule 3 (CLASS_DECL_LIST -> CLASS_DECL .)
    CLASS           shift and go to state 5

    CLASS_DECL                     shift and go to state 4
    CLASS_DECL_LIST                shift and go to state 6

state 5

    (5) CLASS_DECL -> CLASS . ID EXTENDS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> CLASS . ID EXTENDS ID LLAVEIZQ LLAVEDER
    (7) CLASS_DECL -> CLASS . ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (8) CLASS_DECL -> CLASS . ID LLAVEIZQ LLAVEDER

    ID              shift and go to state 7


state 6

    (4) CLASS_DECL_LIST -> CLASS_DECL CLASS_DECL_LIST .

    $end            reduce using rule 4 (CLASS_DECL_LIST -> CLASS_DECL CLASS_DECL_LIST .)


state 7

    (5) CLASS_DECL -> CLASS ID . EXTENDS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> CLASS ID . EXTENDS ID LLAVEIZQ LLAVEDER
    (7) CLASS_DECL -> CLASS ID . LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (8) CLASS_DECL -> CLASS ID . LLAVEIZQ LLAVEDER

    EXTENDS         shift and go to state 8
    LLAVEIZQ        shift and go to state 9


state 8

    (5) CLASS_DECL -> CLASS ID EXTENDS . ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> CLASS ID EXTENDS . ID LLAVEIZQ LLAVEDER

    ID              shift and go to state 10


state 9

    (7) CLASS_DECL -> CLASS ID LLAVEIZQ . FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (8) CLASS_DECL -> CLASS ID LLAVEIZQ . LLAVEDER
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE ID FINALIZADOR
    (14) FIELD_DECL -> . TYPE ID LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE ID PARENTIZQ PARENTDER BLOCK
    (18) METHOD_DECL -> . TYPE ID PARENTIZQ FORMALS PARENTDER BLOCK
    (19) METHOD_DECL -> . VOID ID PARENTIZQ PARENTDER BLOCK
    (20) METHOD_DECL -> . VOID ID PARENTIZQ FORMALS PARENTDER BLOCK
    (23) TYPE -> . INT
    (24) TYPE -> . BOOLEAN
    (25) TYPE -> . STRING
    (26) TYPE -> . ID
    (27) TYPE -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        shift and go to state 13
    VOID            shift and go to state 17
    INT             shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    ID              shift and go to state 11

    FIELD_OR_METHOD_DECL_LIST      shift and go to state 12
    FIELD_DECL                     shift and go to state 14
    METHOD_DECL                    shift and go to state 15
    TYPE                           shift and go to state 16

state 10

    (5) CLASS_DECL -> CLASS ID EXTENDS ID . LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> CLASS ID EXTENDS ID . LLAVEIZQ LLAVEDER

    LLAVEIZQ        shift and go to state 21


state 11

    (26) TYPE -> ID .

    ID              reduce using rule 26 (TYPE -> ID .)
    CORCHIZQ        reduce using rule 26 (TYPE -> ID .)


state 12

    (7) CLASS_DECL -> CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST . LLAVEDER

    LLAVEDER        shift and go to state 22


state 13

    (8) CLASS_DECL -> CLASS ID LLAVEIZQ LLAVEDER .

    CLASS           reduce using rule 8 (CLASS_DECL -> CLASS ID LLAVEIZQ LLAVEDER .)
    $end            reduce using rule 8 (CLASS_DECL -> CLASS ID LLAVEIZQ LLAVEDER .)


state 14

    (9) FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL .
    (10) FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL . FIELD_OR_METHOD_DECL_LIST
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE ID FINALIZADOR
    (14) FIELD_DECL -> . TYPE ID LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE ID PARENTIZQ PARENTDER BLOCK
    (18) METHOD_DECL -> . TYPE ID PARENTIZQ FORMALS PARENTDER BLOCK
    (19) METHOD_DECL -> . VOID ID PARENTIZQ PARENTDER BLOCK
    (20) METHOD_DECL -> . VOID ID PARENTIZQ FORMALS PARENTDER BLOCK
    (23) TYPE -> . INT
    (24) TYPE -> . BOOLEAN
    (25) TYPE -> . STRING
    (26) TYPE -> . ID
    (27) TYPE -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        reduce using rule 9 (FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL .)
    VOID            shift and go to state 17
    INT             shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    ID              shift and go to state 11

    FIELD_DECL                     shift and go to state 14
    FIELD_OR_METHOD_DECL_LIST      shift and go to state 23
    METHOD_DECL                    shift and go to state 15
    TYPE                           shift and go to state 16

state 15

    (11) FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL .
    (12) FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL . FIELD_OR_METHOD_DECL_LIST
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE ID FINALIZADOR
    (14) FIELD_DECL -> . TYPE ID LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE ID PARENTIZQ PARENTDER BLOCK
    (18) METHOD_DECL -> . TYPE ID PARENTIZQ FORMALS PARENTDER BLOCK
    (19) METHOD_DECL -> . VOID ID PARENTIZQ PARENTDER BLOCK
    (20) METHOD_DECL -> . VOID ID PARENTIZQ FORMALS PARENTDER BLOCK
    (23) TYPE -> . INT
    (24) TYPE -> . BOOLEAN
    (25) TYPE -> . STRING
    (26) TYPE -> . ID
    (27) TYPE -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        reduce using rule 11 (FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL .)
    VOID            shift and go to state 17
    INT             shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    ID              shift and go to state 11

    METHOD_DECL                    shift and go to state 15
    FIELD_OR_METHOD_DECL_LIST      shift and go to state 24
    FIELD_DECL                     shift and go to state 14
    TYPE                           shift and go to state 16

state 16

    (13) FIELD_DECL -> TYPE . ID FINALIZADOR
    (14) FIELD_DECL -> TYPE . ID LIST_AUX_IDS ;
    (17) METHOD_DECL -> TYPE . ID PARENTIZQ PARENTDER BLOCK
    (18) METHOD_DECL -> TYPE . ID PARENTIZQ FORMALS PARENTDER BLOCK
    (27) TYPE -> TYPE . CORCHIZQ CORCHDER

    ID              shift and go to state 25
    CORCHIZQ        shift and go to state 26


state 17

    (19) METHOD_DECL -> VOID . ID PARENTIZQ PARENTDER BLOCK
    (20) METHOD_DECL -> VOID . ID PARENTIZQ FORMALS PARENTDER BLOCK

    ID              shift and go to state 27


state 18

    (23) TYPE -> INT .

    ID              reduce using rule 23 (TYPE -> INT .)
    CORCHIZQ        reduce using rule 23 (TYPE -> INT .)


state 19

    (24) TYPE -> BOOLEAN .

    ID              reduce using rule 24 (TYPE -> BOOLEAN .)
    CORCHIZQ        reduce using rule 24 (TYPE -> BOOLEAN .)


state 20

    (25) TYPE -> STRING .

    ID              reduce using rule 25 (TYPE -> STRING .)
    CORCHIZQ        reduce using rule 25 (TYPE -> STRING .)


state 21

    (5) CLASS_DECL -> CLASS ID EXTENDS ID LLAVEIZQ . FIELD_OR_METHOD_DECL_LIST LLAVEDER
    (6) CLASS_DECL -> CLASS ID EXTENDS ID LLAVEIZQ . LLAVEDER
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE ID FINALIZADOR
    (14) FIELD_DECL -> . TYPE ID LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE ID PARENTIZQ PARENTDER BLOCK
    (18) METHOD_DECL -> . TYPE ID PARENTIZQ FORMALS PARENTDER BLOCK
    (19) METHOD_DECL -> . VOID ID PARENTIZQ PARENTDER BLOCK
    (20) METHOD_DECL -> . VOID ID PARENTIZQ FORMALS PARENTDER BLOCK
    (23) TYPE -> . INT
    (24) TYPE -> . BOOLEAN
    (25) TYPE -> . STRING
    (26) TYPE -> . ID
    (27) TYPE -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        shift and go to state 29
    VOID            shift and go to state 17
    INT             shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    ID              shift and go to state 11

    FIELD_OR_METHOD_DECL_LIST      shift and go to state 28
    FIELD_DECL                     shift and go to state 14
    METHOD_DECL                    shift and go to state 15
    TYPE                           shift and go to state 16

state 22

    (7) CLASS_DECL -> CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER .

    CLASS           reduce using rule 7 (CLASS_DECL -> CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER .)
    $end            reduce using rule 7 (CLASS_DECL -> CLASS ID LLAVEIZQ FIELD_OR_METHOD_DECL_LIST LLAVEDER .)


state 23

    (10) FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL FIELD_OR_METHOD_DECL_LIST .

    LLAVEDER        reduce using rule 10 (FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL FIELD_OR_METHOD_DECL_LIST .)


state 24

    (12) FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL FIELD_OR_METHOD_DECL_LIST .
